• fixed the line height of hero title on safari, still have problem on chrome • minor bugfix

--- a/web/app/themes/swiftfest/assets/styles/base/components/footer.scss
+++ b/web/app/themes/swiftfest/assets/styles/base/components/footer.scss
@@ -1,10 +1,14 @@
 footer {
   background-color: $lightest;
   padding: 30px 0;
+  // small
+  @media screen and (max-width: 39.938em) {
+    text-align: center;
+  }
   .title_footer {
     text-transform: uppercase;
     font-size: 30px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     // small
     @media screen and (max-width: 39.938em) {
       text-align: center;
