--- a/web/app/themes/swiftfest/partials/partial-hero/partial-hero.scss
+++ b/web/app/themes/swiftfest/partials/partial-hero/partial-hero.scss
@@ -46,7 +46,7 @@
       @media screen and (max-width: 39.938em) {
         left:0;
         &.hero_title_line_2 {
-          top: 150px !important;
+          top: 120px !important;
           display: block !important;
         }
       }
